[package]
name = "microgen-v3-sdk-rust"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Rust SDK for Microgen API - No Code Backend API"
repository = "https://github.com/mejik-dev/microgen-v3-sdk"
homepage = "https://microgen.id"
license = "MIT"
keywords = ["microgen", "sdk", "backend", "rest", "api", "no-code"]
categories = ["web-programming::http-client", "api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
thiserror = "2"
log = "0.4"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "deny", priority = 5 }
# Select nursery & correctness lints
future_not_send = { level = "deny", priority = 1 }
trait_duplication_in_bounds = { level = "deny", priority = 1 }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[lib]
name = "microgen_v3_sdk_rust"
path = "src/lib.rs"
